# MPI_SAT_Unified_System

./: readme.md
Functional/: CMakeLists.txt  dpllsolver.h  main.cpp  old solve.txt  resolutionsolver.cpp  resolutionsolver.h  restest.cpp  runningex.cnf  satsolver.cpp
Functional/DIM/: tensat.cnf  tenunsat.cnf
Functional/DIMACS/AIM 50/: min-sat.py
Functional/DIMACS/extra/: ex.cnf  twsat.cnf  twunsat.cnf
Functional/Tests/: cdcltest.cpp  dplltest.cpp  dptest.cpp  restest.cpp
Functional/Tests/logs/: dpll_result.txt
Functional/include/cdcl/: cdclsolver.cpp  cdclsolver.h
Functional/include/dp/: dpsolver.cpp  dpsolver.h
Functional/include/dpll/: dpllsolver.cpp  dpllsolver.h
Functional/include/general/: satsolver.cpp  satsolver.h
Functional/include/parser/: DIMACSParser.cpp
Functional/include/res/: resolutionsolver.cpp  resolutionsolver.h
